Publication + Projects (temp)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,198 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
-    <title>My Personal Webpage</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Generic Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="images/generic_icon.png">
 </head>
+
 <body>
-    <h1>Welcome to My Webpage</h1>
-    <p>This is my personal page hosted on GitHub.</p>
+    <div class="title-section">
+        <h1>Jaehwi Jang</h1>
+    </div>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <p>My work is centered on the areas of learning from demonstrations, robust perception, and control, 
+                        with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
+                        <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
+                        My latest projects involve learning constraints from the demonstrations.
+                         I am pursuing my Master's degree at KAIST, under the guidance of <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
+                         This follows my achievement of a Bachelor's degree in Mechanical Engineering and Physics from the same institution.
+                        </p>
+                </td>
+                <td class="image-container">
+                    <img src="images/profile.png" alt="Generic Image">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <table>
+        <tbody>
+            <tr>
+                <td >
+                    <h2>Publications</h2>
+                    <p>
+                        Here's another section for more content. You can use this to highlight different projects, publications, or any other information you'd like to showcase.
+                    </p>
+                    <!-- More content here -->
+                </td>
+                <table>
+                    <colgroup>
+                    <col width="30%" />
+                    <col width="70%" />
+                    </colgroup>
+                    <thead>
+                    <tr>
+                    <th colspan="2"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                    <td>
+                        <a href="images/2023_RAL_TCL_demo.gif" data-lightbox="">
+                          <img style="width:100%" src="images/2023_RAL_TCL_demo.gif" />
+                          </a>
+                    </td>
+                    <td>
+                        <b>Inverse Constraint Learning and Generalization by Transferable Reward Decomposition</b><br />
+                        Jaehwi Jang, Minjae Song, Daehyung Park<br />
+                        <i> IEEE Robotics and Automation Letters (RA-L), 2024 </i> <br />
+                        <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a>
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        <a href="images/2023_roman_demo.gif" data-lightbox="">
+                            <img style="width: 200%" src="images/2023_roman_demo_small.gif" />
+                            </a>
+                    </td>
+                    <td>
+                        <b>SGGNet2: Speech-Scene Graph Grounding Network for Speech-guided Navigation</b><br />
+                        Dohyun Kim*, Yeseung Kim*, Jaehwi Jang*, Minjae Song*, Woojin Choi, Daehyung Park (*- authors contributed equally)<br />
+                        <i>IEEE Int'l Conf. on Robot and Human Interactive Communication (RO-MAN), 2023</i><br />
+                        <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- <a href="/assets/research/2020_IJRR_MM.jpeg" data-lightbox="">
+                                <img style="width: 85%" src="/assets/research/2020_IJRR_MM.jpeg" />
+                                </a> -->
+                        </td>
+                        <td>
+                            <b>Physics-Informed Gradient Regularization for Inverse Reinforcement Learning</b><br />
+                            Jaehwi Jang, Daehyung Park<br />
+                            <i>RSS Workshop on Experiment-oriented Locomotion and Manipulation Research, 2023</i> <br />
+                            <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
+                        </td>
+                        </tr>
+                    </tbody>
+                    </table>
+            </tr>
+        </tbody>
+    </table>
+    <!-- Additional sections... -->
+
+    <table >
+        <tbody>
+            <tr>
+                <td >
+                    <h2>Research projects</h2>
+                    <!-- <b>Interactive Learning Toward In-hand Manipulation of Deformable Objects</b> -->
+                    <!-- <p>Phone: 123-456-7890</p> -->
+                    <!-- Add social media links or other contact methods -->
+                
+        <!-- <br />
+            <a href="/assets/research/research_iitp.png" data-lightbox="Deformable object manipulation + Inverse constraint learning">
+            <img style="width: 50%" src="/assets/research/research_iitp.png" />
+            </a>
+        <br /> -->
+        <!-- In-hand manipulation of deformable objects offers unprecedented opportunities to resolve
+        various real-world problems, such as binding and taping. This project aims to develop a visuotactile
+        in-hand manipulation that repositions/reorientations deformable objects in hand as we want. Toward
+        this line of research, we propose three research thrusts: 1) a physics-informed reinforcement learning
+        (RL) framework, 2) an interactive RL framework, and 3) Sim2Real transfer learning method. -->
+        I participated in research projects on interactive learning for robust skill intelligence and previously in a course project developing Robotics/ML projects.
+        <!-- <b>Selected paper</b>: <a href="https://drive.google.com/open?id=1bswpgVJDXp_9vh55_Gz1cAbylhhjQqhS" target="_blank">[CoRL19]</a>, <a href="https://arxiv.org/abs/2306.12357" target="_blank">[RA-L23]</a>  -->
+        </td>
+        </tr>
+        <tbody>
+
+    <table>
+        <tbody>
+            <tr>
+                <table>
+                    <colgroup>
+                    <col width="30%" />
+                    <col width="70%" />
+                    </colgroup>
+                    <thead>
+                    <tr>
+                    <th colspan="2"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                    <td>
+                        <a href="images/2018_ME400.gif" data-lightbox="">
+                          <img style="width:100%" src="images/2018_ME400.gif" />
+                          </a>
+                    </td>
+                    <td>
+                        <b>Autonomous Ball-picking Vehicle</b><br />
+                        Capstone Design I, ME400<br />
+                        sdfasdfasdfasdf<br />
+                        <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="images/2018_ME400.gif" data-lightbox="">
+                              <img style="width:100%" src="images/2018_ME400.gif" />
+                              </a>
+                        </td>
+                    <td>
+                        <b>Autonomous Ball-picking Vehicle</b><br />
+                        Capstone Design I, ME400<br />
+                        sdfasdfasdfasdf<br />
+                        <!-- <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a> -->
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="images/2018_ME400.gif" data-lightbox="">
+                              <img style="width:100%" src="images/2018_ME400.gif" />
+                              </a>
+                        </td>
+                        <td>
+                            <b>Autonomous Ball-picking Vehicle</b><br />
+                            Capstone Design I, ME400<br />
+                            sdfasdfasdfasdf<br />
+                            <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
+                        </td>
+                        </tr>
+                    </tbody>
+                    </table>
+            </tr>
+        </tbody>
+    </table>
+    </tbody>
+    <table >
+        <tbody>
+            <tr>
+                <td >
+                    <h2>Contact Information</h2>
+                    <p>Email: wognl0402@kaist.ac.kr</p>
+                    <!-- <p>Phone: 123-456-7890</p> -->
+                    <!-- Add social media links or other contact methods -->
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
