--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <tr>
                 <td >
                     <h2>Publications</h2>
-                    <p>
+                    <!-- <p>
                         Here's another section for more content. You can use this to highlight different projects, publications, or any other information you'd like to showcase.
-                    </p>
+                    </p> -->
                     <!-- More content here -->
                 </td>
                 <table>
                     <colgroup>
                     <col width="30%" />
-                    <col width="70%" />
+                    <col width="60%" />
                     </colgroup>
                     <thead>
                     <tr>
@@ -53,27 +53,28 @@
                     </thead>
                     <tbody>
                     <tr>
-                    <td>
+                    <td class="image-container">
                         <a href="images/2023_RAL_TCL_demo.gif" data-lightbox="">
                           <img style="width:100%" src="images/2023_RAL_TCL_demo.gif" />
                           </a>
                     </td>
                     <td>
                         <b>Inverse Constraint Learning and Generalization by Transferable Reward Decomposition</b><br />
-                        Jaehwi Jang, Minjae Song, Daehyung Park<br />
+                        <b>Jaehwi Jang</b>, Minjae Song, Daehyung Park<br />
                         <i> IEEE Robotics and Automation Letters (RA-L), 2024 </i> <br />
                         <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a>
                     </td>
                     </tr>
                     <tr>
-                    <td>
+                    
+                    <td class="image-container">
                         <a href="images/2023_roman_demo.gif" data-lightbox="">
-                            <img style="width: 200%" src="images/2023_roman_demo_small.gif" />
+                            <img style="width: 100%" src="images/2023_roman_demo_small.gif" />
                             </a>
                     </td>
                     <td>
                         <b>SGGNet2: Speech-Scene Graph Grounding Network for Speech-guided Navigation</b><br />
-                        Dohyun Kim*, Yeseung Kim*, Jaehwi Jang*, Minjae Song*, Woojin Choi, Daehyung Park (*- authors contributed equally)<br />
+                        Dohyun Kim*, Yeseung Kim*, <b>Jaehwi Jang*</b>, Minjae Song*, Woojin Choi, Daehyung Park (*- authors contributed equally)<br />
                         <i>IEEE Int'l Conf. on Robot and Human Interactive Communication (RO-MAN), 2023</i><br />
                         <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a>
                     </td>
@@ -129,7 +130,7 @@
                 <table>
                     <colgroup>
                     <col width="30%" />
-                    <col width="70%" />
+                    <col width="65%" />
                     </colgroup>
                     <thead>
                     <tr>
@@ -137,19 +138,21 @@
                     </tr>
                     </thead>
                     <tbody>
+                    
                     <tr>
-                    <td>
-                        <a href="images/2018_ME400.gif" data-lightbox="">
-                          <img style="width:100%" src="images/2018_ME400.gif" />
-                          </a>
-                    </td>
-                    <td>
-                        <b>Autonomous Ball-picking Vehicle</b><br />
-                        Capstone Design I, ME400<br />
-                        sdfasdfasdfasdf<br />
-                        <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
-                    </td>
-                    </tr>
+                        <td>
+                            <a href="images/2018_ME400.gif" data-lightbox="">
+                              <img style="width:100%" src="images/2018_ME400.gif" />
+                              </a>
+                        </td>
+                        <td>
+                            <b>Sim2Real / Real2Sim for robotic skill leraning</b><br />
+                            Capstone Design I, ME400<br />
+                            sdfasdfasdfasdf<br />
+                            <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
+                        </td>
+                        </tr>
+
                     <tr>
                         <td>
                             <a href="images/2018_ME400.gif" data-lightbox="">
@@ -157,8 +160,8 @@
                               </a>
                         </td>
                     <td>
-                        <b>Autonomous Ball-picking Vehicle</b><br />
-                        Capstone Design I, ME400<br />
+                        <b>Inverse Reinforcement Learning by Physics-Informed Neural Networks</b><br />
+                        Capstone Design I, MAS400<br />
                         sdfasdfasdfasdf<br />
                         <!-- <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a> -->
                     </td>
@@ -166,16 +169,33 @@
                     <tr>
                         <td>
                             <a href="images/2018_ME400.gif" data-lightbox="">
-                              <img style="width:100%" src="images/2018_ME400.gif" />
-                              </a>
+                                <img style="width:100%" src="images/2018_ME400.gif" />
+                                </a>
                         </td>
                         <td>
                             <b>Autonomous Ball-picking Vehicle</b><br />
-                            Capstone Design I, ME400<br />
-                            sdfasdfasdfasdf<br />
-                            <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
+                            Capstone Design I, 2018<br />
+                            Undergraduate Capstone project at KAIST. 
+                            We built an autonomous ball-collecting vehicle designed to pick up blue balls while avoiding red balls. 
+                            In this project, I participated as a group leader and was responsible for programming and control tasks.<br />
+                            <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
                         </td>
                         </tr>
+                    <tr>
+                    <td>
+                        <a href="images/2013_HPAC.gif" data-lightbox="">
+                          <img style="width:100%" src="images/2013_HPAC.gif" />
+                          </a>
+                    </td>
+                    <td>
+                        <b>Human Powered Aircraft</b><br />
+                        Human Powered Aircraft Competition, 2013<br />
+                        Participated in the 2013 HPAC hosted by KARI (Korea Aerospace Research Institute). 
+                        We built a human-powered aircraft that successfully flew approximately 20 meters. 
+                        In this project, my responsibilities were specifically focused on designing and making the wings.
+                        <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
+                    </td>
+                    </tr>
                     </tbody>
                     </table>
             </tr>
@@ -188,7 +208,7 @@
                 <td >
                     <h2>Contact Information</h2>
                     <p>Email: wognl0402@kaist.ac.kr</p>
-                    <!-- <p>Phone: 123-456-7890</p> -->
+                    <!-- <p>Phone: (+82) 010-456-7890</p> -->
                     <!-- Add social media links or other contact methods -->
                 </td>
             </tr>
