--- a/index.html
+++ b/index.html
@@ -12,25 +12,35 @@
     <div class="title-section">
         <h1>Jaehwi Jang</h1>
     </div>
-    <table>
+        <table>
+        <colgroup>
+        <col width="72%" />
+        <col width="28%" />
+        </colgroup>
+        <thead>
+        <tr>
+        <th colspan="2"></th>
+        </tr>
+        </thead>
         <tbody>
-            <tr>
-                <td>
-                    <p>My work is centered on the areas of learning from demonstrations, robust perception, and control, 
-                        with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
-                        <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
-                        My latest projects involve learning constraints from the demonstrations.
-                         I am pursuing my Master's degree at KAIST, under the guidance of <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
-                         This follows my achievement of a Bachelor's degree in Mechanical Engineering and Physics from the same institution.
-                        </p>
-                </td>
-                <td class="image-container">
-                    <img src="images/profile.png" alt="Generic Image">
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <p>My work is centered on the areas of learning from demonstrations, robust perception, and control, 
+                    with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
+                    <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
+                    My latest projects involve learning constraints from the demonstrations.
+                     I am pursuing my Master's degree at KAIST, under the guidance of <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
+                     This follows my achievement of a Bachelor's degree in Mechanical Engineering and Physics from the same institution.
+                    </p>
+            </td>
+        <td class="image-container">
+            <img src="images/profile.png" alt="Generic Image">
+        </td>
+        </tr>
+        
         </tbody>
-    </table>
-
+        </table>
+            
     <table>
         <tbody>
             <tr>
