--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </p>
             </td>
         <td class="image-container">
-            <img src="images/profile.png" alt="Description" class="hover-image">
+            <img style="width:100%" src="images/profile.png" alt="Description" class="hover-image">
         </td>
         </tr>
         
