Draft: todo-fix typos

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div class="title-section">
+    <!-- <div class="title-section">
         <h1>Jaehwi Jang</h1>
-    </div>
+    </div> -->
         <table>
         <colgroup>
         <col width="72%" />
@@ -25,12 +25,16 @@
         <tbody>
         <tr>
             <td>
+        <h1 style="text-align:left">Jaehwi Jang</h1>
                 <p>My work is centered on the areas of learning from demonstrations, robust perception, and control, 
                     with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
                     <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
                     My latest projects involve learning constraints from the demonstrations.
-                     I am pursuing my Master's degree at KAIST, under the guidance of <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
-                     This follows my achievement of a Bachelor's degree in Mechanical Engineering and Physics from the same institution.
+                    <br/>
+                    <br/>
+                     I am pursuing my Master's degree in Graduate School of AI at KAIST, advised by <a href="https://sites.google.com/site/daehyungpark">Prof. Daehyung Park</a>. 
+                     I received my bachelor's degree from the Korea Advanced Institute of Science and Technology (KAIST) in August 2021, 
+                     where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>.
                     </p>
             </td>
         <td class="image-container">
@@ -64,8 +68,8 @@
                     <tbody>
                     <tr>
                     <td class="image-container">
-                        <a href="images/2023_RAL_TCL_demo.gif" data-lightbox="">
-                          <img style="width:100%" src="images/2023_RAL_TCL_demo.gif" />
+                        <a href="images/2023_RAL_TCL_demo2.gif" data-lightbox="">
+                          <img style="width:100%" src="images/2023_RAL_TCL_demo2.gif" />
                           </a>
                     </td>
                     <td>
@@ -89,19 +93,6 @@
                         <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a>
                     </td>
                     </tr>
-                    <tr>
-                        <td>
-                            <!-- <a href="/assets/research/2020_IJRR_MM.jpeg" data-lightbox="">
-                                <img style="width: 85%" src="/assets/research/2020_IJRR_MM.jpeg" />
-                                </a> -->
-                        </td>
-                        <td>
-                            <b>Physics-Informed Gradient Regularization for Inverse Reinforcement Learning</b><br />
-                            Jaehwi Jang, Daehyung Park<br />
-                            <i>RSS Workshop on Experiment-oriented Locomotion and Manipulation Research, 2023</i> <br />
-                            <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
-                        </td>
-                        </tr>
                     </tbody>
                     </table>
             </tr>
@@ -113,7 +104,7 @@
         <tbody>
             <tr>
                 <td >
-                    <h2>Research projects</h2>
+                    <h2>Projects</h2>
                     <!-- <b>Interactive Learning Toward In-hand Manipulation of Deformable Objects</b> -->
                     <!-- <p>Phone: 123-456-7890</p> -->
                     <!-- Add social media links or other contact methods -->
@@ -151,28 +142,35 @@
                     
                     <tr>
                         <td>
-                            <a href="images/2018_ME400.gif" data-lightbox="">
-                              <img style="width:100%" src="images/2018_ME400.gif" />
+                            <a href="images/2023_TUW.gif" data-lightbox="">
+                              <img style="width:100%" src="images/2023_TUW.gif" />
                               </a>
                         </td>
                         <td>
-                            <b>Sim2Real / Real2Sim for robotic skill leraning</b><br />
-                            Capstone Design I, ME400<br />
-                            sdfasdfasdfasdf<br />
+                            <b>Sim2Real / Real2Real for robotic skill leraning</b><br />
+                            Project @ <a href="https://rirolab.kaist.ac.kr/">RIRO Lab, 2023</a> <br />
+                        <br/>
+                        In this project, we train robotic agents to acquire human-like skills through interactive learning. 
+                            We utilize simulated environments in IsaacSim or employ teleoperation to guide and teach the robots.<br />
                             <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
                         </td>
                         </tr>
 
                     <tr>
                         <td>
-                            <a href="images/2018_ME400.gif" data-lightbox="">
-                              <img style="width:100%" src="images/2018_ME400.gif" />
+                            <a href="images/2022_PINN.gif" data-lightbox="">
+                              <img style="width:100%" src="images/2022_PINN.gif" />
                               </a>
                         </td>
                     <td>
-                        <b>Inverse Reinforcement Learning by Physics-Informed Neural Networks</b><br />
-                        Capstone Design I, MAS400<br />
-                        sdfasdfasdfasdf<br />
+                        <b>Physics-Informed Gradient Regularization for Inverse Reinforcement Learning</b><br />
+                        <!-- Topics in Mathematics &lt<i>Introduction to Scientific Machine Learning</i>&gt, MAS480<br /> -->
+                        <i>RSS Workshop on Experiment-oriented Locomotion and Manipulation Research, 2023</i> <br />
+                        <br/>
+                        In this project, I proposed a novel approach by integrating Physics-Informed Neural Networks (PINN) into an Inverse Reinforcement Learning (IRL) framework. 
+                        <br\>
+                        This methodology utilized PINN to solve the Hamilton-Jacobi-Bellman differential equation, 
+                        achieving two main objectives: (i) replication of the demonstrated behavior and (ii) recovery of the reward.<br />
                         <!-- <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a> -->
                     </td>
                     </tr>
@@ -185,8 +183,10 @@
                         <td>
                             <b>Autonomous Ball-picking Vehicle</b><br />
                             Capstone Design I, 2018<br />
-                            Undergraduate Capstone project at KAIST. 
+                        <br/>
+                        Undergraduate Capstone project at KAIST. 
                             We built an autonomous ball-collecting vehicle designed to pick up blue balls while avoiding red balls. 
+                            <br/>
                             In this project, I participated as a group leader and was responsible for programming and control tasks.<br />
                             <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
                         </td>
@@ -200,8 +200,10 @@
                     <td>
                         <b>Human Powered Aircraft</b><br />
                         Human Powered Aircraft Competition, 2013<br />
+                        <br/>
                         Participated in the 2013 HPAC hosted by KARI (Korea Aerospace Research Institute). 
                         We built a human-powered aircraft that successfully flew approximately 20 meters. 
+                        <br/>
                         In this project, my responsibilities were specifically focused on designing and making the wings.
                         <!-- <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a> -->
                     </td>
