Add reference (Jon Barron, Flaticon), fixed typo

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
         <tr>
             <td>
         <h1 style="text-align:left">Jaehwi Jang</h1>
-                <p>My work is centered on the areas of learning from demonstrations, robust perception, and control, 
+                <p>
+                    I am an MS student in <i>the Graduate School of AI</i> at the Korea Advanced Institute of Science and Technology (KAIST), advised by Prof. <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
+                    My research interest lies in robust robotic skill learning,
                     with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
                     <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
-                    My latest projects involve learning constraints from the demonstrations.
+                    My latest projects involve learning constraints from the demonstrations for safe skill learning.
                     <br/>
                     <br/>
-                     I am pursuing my Master's degree in Graduate School of AI at KAIST, advised by <a href="https://sites.google.com/site/daehyungpark">Prof. Daehyung Park</a>. 
-                     I received my bachelor's degree from the Korea Advanced Institute of Science and Technology (KAIST) in August 2021, 
+                     I received my bachelor's degree from KAIST in August 2021, 
                      where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>.
                     </p>
             </td>
@@ -58,7 +59,7 @@
                 <table>
                     <colgroup>
                     <col width="30%" />
-                    <col width="60%" />
+                    <col width="70%" />
                     </colgroup>
                     <thead>
                     <tr>
@@ -147,11 +148,11 @@
                               </a>
                         </td>
                         <td>
-                            <b>Sim2Real / Real2Real for robotic skill leraning</b><br />
-                            Project @ <a href="https://rirolab.kaist.ac.kr/">RIRO Lab, 2023</a> <br />
+                            <b>Sim2Real / Real2Real for robotic skill learning</b><br />
+                            Project @ <a href="https://rirolab.kaist.ac.kr/">RIRO Lab</a>, 2023<br />
                         <br/>
                         In this project, we train robotic agents to acquire human-like skills through interactive learning. 
-                            We utilize simulated environments in IsaacSim or employ teleoperation to guide and teach the robots.<br />
+                            We utilize simulated environments in <a href="https://developer.nvidia.com/isaac-sim">IsaacSim</a> or employ teleoperation to guide and teach the robots.<br />
                             <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
                         </td>
                         </tr>
@@ -226,5 +227,17 @@
             </tr>
         </tbody>
     </table>
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+          <td style="padding:0px">
+            <br>
+            <p style="text-align:right;font-size:small;">
+                The homepage template is a modified version of <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>
+                <br>
+                Letter j icons created by Hight Quality Icons - <a href="https://www.flaticon.com/free-icons/letter-j" title="letter j icons">Flaticon</a>
+            </p>
+          </td>
+        </tr>
+      </tbody></table>
 </body>
 </html>
