--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Jaehwi Jang's website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/png" href="images/generic_icon.png">
+    <link rel="icon" type="image/png" href="images/generic_icon">
 </head>
 
 <body>
