--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     </td>
                     <td>
                         <b>SGGNet2: Speech-Scene Graph Grounding Network for Speech-guided Navigation</b><br />
-                        Dohyun Kim*, Yeseung Kim*, <b>Jaehwi Jang*</b>, Minjae Song*, Woojin Choi, Daehyung Park (*- authors contributed equally)<br />
+                        Dohyun Kim*, Yeseung Kim*, <b>Jaehwi Jang*</b>, Minjae Song*, Woojin Choi, Daehyung Park 
+                        <br/>(*- authors contributed equally)<br />
                         <i>IEEE Int'l Conf. on Robot and Human Interactive Communication (RO-MAN), 2023</i><br />
                         <a href="https://drive.google.com/file/d/1LMA34XNXyEpW6uJBIgyIq8xkbeJQ4onr/view?usp=share_link" target="_blank">[PDF]</a>
                     </td>
