Last - margin and font size

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Jaehwi Jang's website</title>
+    <title>Jaehwi Jang</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/png" href="images/generic_icon">
+    <link rel="icon" type="image/png" href="images/generic_icon.png" sizes="16x16">
 </head>
 
 <body>
@@ -28,6 +28,7 @@
         <h1 style="text-align:left">Jaehwi Jang</h1>
                 <p>
                     I am an MS student in <i>the Graduate School of AI</i> at the Korea Advanced Institute of Science and Technology (KAIST), advised by Prof. <a href="https://sites.google.com/site/daehyungpark">Daehyung Park</a>. 
+                    <br><br>
                     My research interest lies in robust robotic skill learning,
                     with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
                     <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
@@ -35,7 +36,7 @@
                     <br/>
                     <br/>
                      I received my bachelor's degree from KAIST in August 2021, 
-                     where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>.
+                     where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>. I had the honor of being awarded the KAIST Presidential Fellowship.
                     </p>
             </td>
         <td class="image-container">
@@ -77,7 +78,7 @@
                         <b>Inverse Constraint Learning and Generalization by Transferable Reward Decomposition</b><br />
                         <b>Jaehwi Jang</b>, Minjae Song, Daehyung Park<br />
                         <i> IEEE Robotics and Automation Letters (RA-L), 2024 </i> <br />
-                        <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=jpP_7XiR46c" target="_blank">[Video]</a>
+                        <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://youtu.be/SD9HV1z5owk" target="_blank">[Video]</a>
                     </td>
                     </tr>
                     <tr>
